# game_of_life_cpp

./: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  README.md  Tile.cpp  Tile.h  main.cpp
